[package]
name = "cross_pro_cg"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
env_logger = "0.10"
semver = "1.0"

